@@ -1,3 +1,7 @@
+2005-02-03  Sergey V. Udaltsov  <svu@gnome.org>
+
+	* gnome-settings-keyboard-xkb.c: fix #165018
+
 2005-02-01  Elijah Newren  <newren@gmail.com>
 
 	* gnome-settings-xmodmap.h:
